--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,4 +1,4 @@
-name: Build and Push Multi-Arch Image
+name: Build and Push
 
 on:
     workflow_dispatch:
@@ -43,18 +43,13 @@ jobs:
                     echo "php_version=${PHP_VERSION}" >> $GITHUB_OUTPUT
                     echo "version_tag=${VERSION_TAG}" >> $GITHUB_OUTPUT
 
-    build-and-push:
-        name: Build PHP ${{ needs.validate.outputs.php_version }}
+    build-amd64:
+        name: Build PHP ${{ needs.validate.outputs.php_version }} (amd64)
         runs-on: ubuntu-latest
         needs: validate
         steps:
             -   name: Checkout code
                 uses: actions/checkout@v4
-
-            -   name: Set up QEMU
-                uses: docker/setup-qemu-action@v3
-                with:
-                    platforms: linux/amd64,linux/arm64
 
             -   name: Set up Docker Buildx
                 uses: docker/setup-buildx-action@v3
@@ -66,26 +61,81 @@ jobs:
                     username: ${{ github.actor }}
                     password: ${{ secrets.GITHUB_TOKEN }}
 
-            -   name: Extract metadata (tags, labels) for Docker
-                id: meta
-                uses: docker/metadata-action@v5
-                with:
-                    images: ghcr.io/forlaravel/vscode
-                    tags: |
-                        type=raw,value=${{ needs.validate.outputs.version_tag }}-php${{ needs.validate.outputs.php_version }}
-                        type=raw,value=latest-php${{ needs.validate.outputs.php_version }}
-
-            -   name: Build and push multi-arch image
+            -   name: Build and push amd64 image
                 uses: docker/build-push-action@v5
                 with:
                     context: .
-                    platforms: linux/amd64,linux/arm64
+                    platforms: linux/amd64
                     build-args: |
                         INPUT_PHP=${{ needs.validate.outputs.php_version }}
-                    tags: ${{ steps.meta.outputs.tags }}
-                    labels: ${{ steps.meta.outputs.labels }}
+                    tags: ghcr.io/forlaravel/vscode:${{ needs.validate.outputs.version_tag }}-php${{ needs.validate.outputs.php_version }}-amd64
                     push: true
                     provenance: false
                     sbom: false
-                    cache-from: type=gha,scope=php-${{ needs.validate.outputs.php_version }}
-                    cache-to: type=gha,mode=max,scope=php-${{ needs.validate.outputs.php_version }}
+                    cache-from: type=gha,scope=php-${{ needs.validate.outputs.php_version }}-amd64
+                    cache-to: type=gha,mode=max,scope=php-${{ needs.validate.outputs.php_version }}-amd64
+
+    build-arm64:
+        name: Build PHP ${{ needs.validate.outputs.php_version }} (arm64)
+        runs-on: ubuntu-24.04-arm
+        needs: validate
+        steps:
+            -   name: Checkout code
+                uses: actions/checkout@v4
+
+            -   name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v3
+
+            -   name: Log in to GitHub Container Registry
+                uses: docker/login-action@v3
+                with:
+                    registry: ghcr.io
+                    username: ${{ github.actor }}
+                    password: ${{ secrets.GITHUB_TOKEN }}
+
+            -   name: Build and push arm64 image
+                uses: docker/build-push-action@v5
+                with:
+                    context: .
+                    platforms: linux/arm64
+                    build-args: |
+                        INPUT_PHP=${{ needs.validate.outputs.php_version }}
+                    tags: ghcr.io/forlaravel/vscode:${{ needs.validate.outputs.version_tag }}-php${{ needs.validate.outputs.php_version }}-arm64
+                    push: true
+                    provenance: false
+                    sbom: false
+                    cache-from: type=gha,scope=php-${{ needs.validate.outputs.php_version }}-arm64
+                    cache-to: type=gha,mode=max,scope=php-${{ needs.validate.outputs.php_version }}-arm64
+
+    create-manifest:
+        name: Create manifest PHP ${{ needs.validate.outputs.php_version }}
+        runs-on: ubuntu-latest
+        needs: [validate, build-amd64, build-arm64]
+        steps:
+            -   name: Log in to GitHub Container Registry
+                uses: docker/login-action@v3
+                with:
+                    registry: ghcr.io
+                    username: ${{ github.actor }}
+                    password: ${{ secrets.GITHUB_TOKEN }}
+
+            -   name: Create and push multi-arch manifest
+                run: |
+                    IMAGE_BASE="ghcr.io/forlaravel/vscode"
+                    TAG_BASE="${{ needs.validate.outputs.version_tag }}-php${{ needs.validate.outputs.php_version }}"
+
+                    # Create versioned manifest
+                    docker manifest create ${IMAGE_BASE}:${TAG_BASE} \
+                        ${IMAGE_BASE}:${TAG_BASE}-amd64 \
+                        ${IMAGE_BASE}:${TAG_BASE}-arm64
+
+                    docker manifest push ${IMAGE_BASE}:${TAG_BASE}
+
+                    # Create latest manifest
+                    LATEST_TAG="latest-php${{ needs.validate.outputs.php_version }}"
+
+                    docker manifest create ${IMAGE_BASE}:${LATEST_TAG} \
+                        ${IMAGE_BASE}:${TAG_BASE}-amd64 \
+                        ${IMAGE_BASE}:${TAG_BASE}-arm64
+
+                    docker manifest push ${IMAGE_BASE}:${LATEST_TAG}
