--- a/.github/workflows/scheduled-rebuild.yml
+++ b/.github/workflows/scheduled-rebuild.yml
@@ -1,6 +1,8 @@
-name: Weekly Rebuild (Security Patches)
+name: Build Images
 
 on:
+    push:
+        branches: [main]
     schedule:
         # Every Sunday at 03:00 UTC
         -   cron: '0 3 * * 0'
@@ -11,21 +13,35 @@ permissions:
     contents: read
 
 jobs:
-    rebuild:
-        name: Rebuild PHP ${{ matrix.php_version }}
+    setup:
+        name: Setup Build Matrix
         runs-on: ubuntu-latest
+        outputs:
+            matrix: ${{ steps.set-matrix.outputs.matrix }}
+        steps:
+            -   name: Set matrix values
+                id: set-matrix
+                run: |
+                    cat << 'EOF' > matrix.json
+                    {
+                      "include": [
+                        {"php_version": "8.4"},
+                        {"php_version": "8.5"}
+                      ]
+                    }
+                    EOF
+                    echo "matrix=$(cat matrix.json | jq -c .)" >> $GITHUB_OUTPUT
+
+    build-amd64:
+        name: Build PHP ${{ matrix.php_version }} (amd64)
+        runs-on: ubuntu-latest
+        needs: setup
         strategy:
             fail-fast: false
-            matrix:
-                php_version: ["8.4", "8.5"]
+            matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
         steps:
             -   name: Checkout code
                 uses: actions/checkout@v4
-
-            -   name: Set up QEMU
-                uses: docker/setup-qemu-action@v3
-                with:
-                    platforms: linux/amd64,linux/arm64
 
             -   name: Set up Docker Buildx
                 uses: docker/setup-buildx-action@v3
@@ -37,26 +53,87 @@ jobs:
                     username: ${{ github.actor }}
                     password: ${{ secrets.GITHUB_TOKEN }}
 
-            -   name: Extract metadata (tags, labels) for Docker
-                id: meta
-                uses: docker/metadata-action@v5
-                with:
-                    images: ghcr.io/forlaravel/vscode
-                    tags: |
-                        type=raw,value=1.0-php${{ matrix.php_version }}
-                        type=raw,value=latest-php${{ matrix.php_version }}
-
-            -   name: Build and push multi-arch image
+            -   name: Build and push amd64 image
                 uses: docker/build-push-action@v5
                 with:
                     context: .
-                    platforms: linux/amd64,linux/arm64
+                    platforms: linux/amd64
                     build-args: |
                         INPUT_PHP=${{ matrix.php_version }}
-                    tags: ${{ steps.meta.outputs.tags }}
-                    labels: ${{ steps.meta.outputs.labels }}
+                    tags: ghcr.io/forlaravel/vscode:1.0-php${{ matrix.php_version }}-amd64
                     push: true
                     provenance: false
                     sbom: false
-                    cache-from: type=gha,scope=php-${{ matrix.php_version }}
-                    cache-to: type=gha,mode=max,scope=php-${{ matrix.php_version }}
+                    cache-from: type=gha,scope=php-${{ matrix.php_version }}-amd64
+                    cache-to: type=gha,mode=max,scope=php-${{ matrix.php_version }}-amd64
+
+    build-arm64:
+        name: Build PHP ${{ matrix.php_version }} (arm64)
+        runs-on: ubuntu-24.04-arm
+        needs: setup
+        strategy:
+            fail-fast: false
+            matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
+        steps:
+            -   name: Checkout code
+                uses: actions/checkout@v4
+
+            -   name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v3
+
+            -   name: Log in to GitHub Container Registry
+                uses: docker/login-action@v3
+                with:
+                    registry: ghcr.io
+                    username: ${{ github.actor }}
+                    password: ${{ secrets.GITHUB_TOKEN }}
+
+            -   name: Build and push arm64 image
+                uses: docker/build-push-action@v5
+                with:
+                    context: .
+                    platforms: linux/arm64
+                    build-args: |
+                        INPUT_PHP=${{ matrix.php_version }}
+                    tags: ghcr.io/forlaravel/vscode:1.0-php${{ matrix.php_version }}-arm64
+                    push: true
+                    provenance: false
+                    sbom: false
+                    cache-from: type=gha,scope=php-${{ matrix.php_version }}-arm64
+                    cache-to: type=gha,mode=max,scope=php-${{ matrix.php_version }}-arm64
+
+    create-manifest:
+        name: Create manifest PHP ${{ matrix.php_version }}
+        runs-on: ubuntu-latest
+        needs: [setup, build-amd64, build-arm64]
+        strategy:
+            fail-fast: false
+            matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
+        steps:
+            -   name: Log in to GitHub Container Registry
+                uses: docker/login-action@v3
+                with:
+                    registry: ghcr.io
+                    username: ${{ github.actor }}
+                    password: ${{ secrets.GITHUB_TOKEN }}
+
+            -   name: Create and push multi-arch manifest
+                run: |
+                    IMAGE_BASE="ghcr.io/forlaravel/vscode"
+                    TAG_BASE="1.0-php${{ matrix.php_version }}"
+
+                    # Create versioned manifest
+                    docker manifest create ${IMAGE_BASE}:${TAG_BASE} \
+                        ${IMAGE_BASE}:${TAG_BASE}-amd64 \
+                        ${IMAGE_BASE}:${TAG_BASE}-arm64
+
+                    docker manifest push ${IMAGE_BASE}:${TAG_BASE}
+
+                    # Create latest manifest
+                    LATEST_TAG="latest-php${{ matrix.php_version }}"
+
+                    docker manifest create ${IMAGE_BASE}:${LATEST_TAG} \
+                        ${IMAGE_BASE}:${TAG_BASE}-amd64 \
+                        ${IMAGE_BASE}:${TAG_BASE}-arm64
+
+                    docker manifest push ${IMAGE_BASE}:${LATEST_TAG}
